--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h1>Betty.M</h1>
       <h2 class="mb-5">Front-end developer based in Ethiopia</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
