--- a/contact.html
+++ b/contact.html
@@ -101,21 +101,21 @@
           <div class="col-md-4">
             <h3>Email</h3>
             <p>
-              <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
+              <a href="mailto:patricia@gmail.com"> betty@gmail.com </a>
             </p>
             <h3>Twitter</h3>
             <p>
-              <a href="https://www.twitter.com/patricia" target="_blank">
-                @patricia
+              <a href="https://www.twitter.com/betty" target="_blank">
+                @betty
               </a>
             </p>
             <h3>Instagram</h3>
             <p>
               <a
-                href="https://www.instagram.com/patricia.codes"
+                href="https://www.instagram.com/betty.codes"
                 target="_blank"
               >
-                @patricia.codes
+                @betty.codes
               </a>
             </p>
           </div>
@@ -140,30 +140,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:betty@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email betty"
         >
-          patricia@gmail.com
+          betty@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/betty"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/betty"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/betty"
           target="_blank"
           title="Twitter Profile"
         >
