--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact Patricia. Patricia is a front-end engineer based in Portugal. "
+      content="Contact betty. m is a front-end engineer based in ethiopia. "
     />
-    <title>Contact Patricia - Patricia Pereira</title>
+    <title>Contact betty</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -53,13 +53,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About betty"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="betty's work"> Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact betty"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -171,9 +171,9 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by betty.m, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="#"
           target="_blank"
         >
           open-sourced
