--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I’m Patricia Pereira</h1>
-            <h2 class="mb-4">Front-end developer based in Portugal </h2>
+            <h1 class="mb-4">Hi, I’m Betty.M</h1>
+            <h2 class="mb-4">Front-end developer based in ethiopia </h2>
             <p class="mb-5">
               I’m currently seeking new opportunities in front-end development. I’m open to work remotely and have flexible hours. I’m highly skilled in JavaScript and React.
             </p>
