--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/betty"
+          href="#"
           target="_blank"
           title="GitHub Profile"
         >
