--- a/work.html
+++ b/work.html
@@ -168,7 +168,7 @@
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/betty"
+          href="#"
           target="_blank"
           title="GitHub Profile"
         >
