--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About betty"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="betty's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact betty"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -87,7 +87,7 @@
           <a
             href="/contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact betty"
           >
             Contact me
           </a>
@@ -95,30 +95,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:betty@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email betty"
         >
-          patricia@gmail.com
+          betty@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="#"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/betty"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/betty"
           target="_blank"
           title="Twitter Profile"
         >
@@ -126,9 +126,9 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by betty.m, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="#"
           target="_blank"
         >
           open-sourced
